[package]
name = "email_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
base64 = "0.21.7"
cfdkim = { git = "https://github.com/vanruch/dkim", rev = "67cd8e004f061d546f76b05888806eb1a7cd35d8", default-features = false }
mailparse = "0.14.1"
rsa = { workspace = true }
slog = "2.7.0"
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = "0.4.1"
lazy_static = { workspace = true }

[lints]
workspace = true
