[package]
name = "email_proof"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-sol-types = { workspace = true }
base64 = "0.21.7"
cfdkim = { git = "https://github.com/vlayer-xyz/dkim", rev = "04668378083e2236489b3749b4112c847972071b", default-features = false }
derivative = { workspace = true }
itertools = { workspace = true }
mailparse = "0.14.1"
rsa = { workspace = true }
slog = "2.7.0"
thiserror = { workspace = true }
verifiable_dns = { workspace = true, default-features = false }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = "0.4.1"
lazy_static = { workspace = true }
verifiable_dns = { workspace = true, default-features = false, features = ["signer"] }

[lints]
workspace = true
