[package]
name = "vlayer-engine"
description = "Query Ethereum state, or any other EVM-based blockchain state within the RISC Zero zkVM."
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { version = "0.3.7", default-features = false }
alloy-rlp-derive = { version = "0.3.7", default-features = false }
alloy-sol-types = "0.7"
anyhow = "1.0"
ethers-core = { version = "2.0" }
nybbles = { version = "0.2.1", features = ["serde"] }
once_cell = "1.19"
risc0-zkvm = { workspace = true }
revm = { version = "10.0", default-features = false, features = [
    "serde",
    "std",
] }
rlp = "0.5.2"
serde = "1.0"
tracing = { workspace = true }
thiserror = { workspace = true }
mpt = { path = "../mpt" }
as-any = "0.3.1"
dyn-clone = "1.0.17"
serde_json = "1.0"
lazy_static = "1.5.0"
web_proof = { path = "../web_proof" }

[dev-dependencies]
alloy-trie = "0.4.1"
test-log = "0.2.16"
serde_json = { version = "1.0" }

[lints.clippy]
unwrap_used = "deny"
