[package]
name = "gas_price_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
