[package]
name = "generate_fixtures"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
hex = { workspace = true }
rangeset = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tlsn-core = { workspace = true }
tlsn-utils = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web_proof = { path = "../web_proof", version = "0.1.0" }
web_prover = { path = "../web_prover", version = "0.1.0" }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tlsn-utils"]
