[package]
name = "guest_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }

[build-dependencies]
guest_build_utils = { workspace = true, features = ["risc0"] }

[package.metadata.risc0]
methods = ["risc0_call_guest", "risc0_chain_guest"]

[lints]
workspace = true
