[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, feature = ["prove"] }
vlayer-engine = { path = "../vlayer/engine", features = ["host"] }
guest_wrapper = { path = "../guest_wrapper" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }
alloy-primitives = { workspace = true }
ethers-providers = { workspace = true }
thiserror = { workspace = true }
url = { version = "2.4", default-features = false }

[dev-dependencies]
alloy-sol-types = "0.7.6"
test-log = "0.2.15"
anyhow = "1.0"