[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true }
vlayer-engine = { path = "../vlayer/engine" }
guest_wrapper = { path = "../guest_wrapper" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
ethers-providers = { workspace = true }
thiserror = { workspace = true }
url = { version = "2.4", default-features = false }
alloy-sol-types = "0.7"
anyhow = "1.0"
log = {version="0.4"}
revm = { version = "9.0", default-features = false, features = ["serde", "std"] }
serde = "1.0"
serde_json = { version = "1.0"}
tokio = { workspace = true}

[dev-dependencies]
alloy-sol-types = "0.7.6"
test-log = "0.2.15"
anyhow = "1.0"
ctor = "0.2.8"
