[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-ethereum-contracts = { path="../../contracts/lib/risc0-ethereum/contracts"}
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true }
vlayer-engine = { path = "../vlayer/engine" }
guest_wrapper = { path = "../guest_wrapper" }
mpt = { path = "../mpt" }
tracing-subscriber = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
ethers-providers = { workspace = true }
ethers-core = { version = "2.0" }
thiserror = { workspace = true }
url = { version = "2.5", default-features = false }
alloy-sol-types = { workspace = true }
anyhow = "1.0"
log = { version = "0.4" }
revm = { version = "10.0", default-features = false, features = [
    "serde",
    "std",
] }
serde = "1.0"
serde_json = { version = "1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
ethereum-types = "0.14.1"
hex = "0.4.3"
auto_impl = "1.2.0"

[dev-dependencies]
alloy-sol-types = "0.7.7"
test-log = "0.2.16"
anyhow = "1.0"
ctor = "0.2.8"
