[package]
name = "host_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
risc0-zkvm = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }

[lints]
workspace = true
