[package]
name = "host_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
risc0-zkvm = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
