[package]
name = "key_value"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
libmdbx = "0.5.2"
static_assertions = "1.1.0"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
