[package]
name = "key_value"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
libmdbx = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
