[package]
name = "key_value"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
auto_impl = { workspace = true }
libmdbx = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "mdbx_insert"
harness = false
