[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-trie = { workspace = true }
bytes = { workspace = true }
common = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
digest = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
nybbles = { workspace = true, features = ["serde"] }
rand = "0.8.5"
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
