[package]
name = "provider"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
ethers-providers = { workspace = true }
ethers-core = { workspace = true }
call_engine = { workspace = true }
block_header = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
auto_impl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
