[package]
name = "provider"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
auto_impl = { workspace = true }
block_header = { workspace = true }
common = { workspace = true }
derive-new = { workspace = true }
ethers-core = { workspace = true }
ethers-providers = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }

[lints]
workspace = true
