[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["macros"] }
http-body-util = "0.1.2"
mime = "0.3.17"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0.61"
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy-primitives = { workspace = true }
derivative = "2.2.0"
