[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["macros"] }
http-body-util = "0.1.2"
mime = "0.3.17"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
alloy-primitives = { workspace = true }
hex = "0.4.3"
axum-jrpc = "0.7.1"
host = { path = "../host" }
alloy-chains = "0.1.23"

[dev-dependencies]
reqwest = "0.12.5"
lazy_static = "1.5.0"
