[package]
name = "server_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
assert-json-diff = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-jrpc = { workspace = true }
common = { workspace = true }
derive-new = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
host_utils = { workspace = true }
http-body-util = { workspace = true }
mime = { workspace = true }
mockito = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower-request-id = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
