[workspace]
resolver = "2"
# members = ["host", "methods", "template/guest"]
members = ["host"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true


[workspace.dependencies]
risc0-zkvm = { version = "1.0.1"}