[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
block_header = { workspace = true }
call_engine = { workspace = true }
call_guest_wrapper = { workspace = true }
call_host = { workspace = true }
mpt = { workspace = true }
provider = { workspace = true }

alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-trie = { workspace = true }
anyhow = { workspace = true }
chain = { workspace = true }
chain_client = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
eyre = "0.6.12"
comfy-table = { workspace = true }
delegate = { workspace = true }
derive-new = { workspace = true }
ethers-core = { workspace = true }
forge = { workspace = true }
foundry-cheatcodes = { workspace = true }
foundry-cli = { workspace = true }
foundry-common = { workspace = true }
foundry-compilers = { workspace = true }
foundry-config = { workspace = true }
foundry-debugger = { workspace = true }
foundry-evm = { workspace = true }
foundry-evm-core = { workspace = true }
mock_chain_server = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = "0.4.38"
indicatif = "0.17.8"
parking_lot = "0.12.3"
hyper = "1.5.0"
yansi = "1.0.1"
quick-junit = "0.5.0"
semver = "1.0.23"
inferno = "0.11.21"
opener = "0.7"
proptest = "1.5.0"
itertools = { workspace = true }

[lints]
workspace = true
