[package]
name = "test_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-trie = { workspace = true }
block_header = { workspace = true }
call_db = { workspace = true }
call_engine = { workspace = true }
call_host = { workspace = true }
call_precompiles = { workspace = true }
chain = { workspace = true }
chain_client = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clearscreen = "4.0"
color-eyre = { workspace = true }
comfy-table = { workspace = true }
delegate = { workspace = true }
derive-new = { workspace = true }
ethers-core = { workspace = true }
eyre = { workspace = true }
forge = { workspace = true }
foundry-cli = { workspace = true }
foundry-common = { workspace = true }
foundry-compilers = { workspace = true }
foundry-config = { workspace = true }
foundry-debugger = { workspace = true }
foundry-evm = { workspace = true }
foundry-evm-core = { workspace = true }
guest_wrapper = { workspace = true }
hickory-resolver = { workspace = true }
host_utils = { workspace = true }
indicatif = { workspace = true }
inferno = { workspace = true }
itertools = { workspace = true }
mailparse = { workspace = true }
mpt = { workspace = true }
opener = { workspace = true }
optimism = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
provider = { workspace = true }
quick-junit = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
verifiable_dns = { workspace = true, features = ["signer"] }
watchexec = "5.0"
watchexec-events = "4.0"
watchexec-signals = "4.0"
yansi = { workspace = true }

[dev-dependencies]
foundry-test-utils = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
