[package]
name = "verifiable_dns"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["now"] }
futures = { workspace = true }
olpc-cjson = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true, features = ["base64", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
serde_urlencoded = { workspace = true }

[lints]
workspace = true
