[package]
name = "verifiable_dns"
version = "0.1.0"
edition = "2024"

[features]
default = ["http", "signer"]
http = ["reqwest", "reqwest-retry", "reqwest-middleware"]
signer = ["tokio", "futures"]

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["now"] }
futures = { workspace = true, optional = true }
olpc-cjson = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["rustls-tls"] }
reqwest-middleware = { version = "0.4.0", optional = true }
reqwest-retry = { version = "0.7.0", optional = true }
rsa = { workspace = true, features = ["sha2"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true, features = ["base64", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }

[dev-dependencies]
lazy_static = { workspace = true }
serde_urlencoded = { workspace = true }

[lints]
workspace = true
