[[bin]]
name = "vld"
path = "src/main.rs"

[package]
name = "vld"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_autocomplete = "0.4.2"
glob = "0.3.1"
rustyline = "15.0.0"
thiserror.workspace = true

[lints]
workspace = true
