[package]
name = "web_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
tlsn-core = { workspace = true }
p256 = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
thiserror = { workspace = true }
regex = "1.10.6"
http = "1.1.0"
httparse = "1.9.4"

[features]
fixtures = []
