[package]
name = "web_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-dyn-abi = { workspace = true }
httparse = { workspace = true }
p256 = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tlsn-core = { workspace = true }
url = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }

[features]
fixtures = []

[lints]
workspace = true
