[package]
name = "web_proof"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-dyn-abi = { workspace = true }
bincode = { workspace = true }
chunked_transfer = { workspace = true }
derivative = { workspace = true }
derive-new = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
k256 = { workspace = true }
mime = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tlsn-core = { workspace = true }
url = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
insta = { workspace = true }

[features]
fixtures = []

[lints]
workspace = true
