[package]
name = "web_prover"
version = "0.1.0"
edition = "2021"

[[example]]
name = "generate_web_proof"
path = "examples/generate_web_proof.rs"

[features]
integration-tests = []

[dependencies]
bincode = { workspace = true }
constcat = { workspace = true }
derive-new = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["full"] }
notary-client = { workspace = true }
regex = "1.11.1"
serde_json = { workspace = true }
tlsn-common = { git = "https://github.com/vlayer-xyz/tlsn.git", rev = "febf4d080469892cebde57bd3b98ae269d44abe6" }
tlsn-core = { git = "https://github.com/vlayer-xyz/tlsn.git", rev = "febf4d080469892cebde57bd3b98ae269d44abe6" }
tlsn-formats = { git = "https://github.com/vlayer-xyz/tlsn.git", rev = "febf4d080469892cebde57bd3b98ae269d44abe6" }
tlsn-prover = { git = "https://github.com/vlayer-xyz/tlsn.git", rev = "febf4d080469892cebde57bd3b98ae269d44abe6" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "425614e" }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
