[package]
name = "web_prover"
version = "0.1.0"
edition = "2024"

[features]
integration-tests = []
tlsn-jwt = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
constcat = { workspace = true }
derivative = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["full"] }
notary-client = { workspace = true }
rangeset = { workspace = true }
regex = "1.11.1"
serde_json = { workspace = true }
tlsn-common = { workspace = true }
tlsn-core = { workspace = true }
tlsn-prover = { workspace = true }
tlsn-utils = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tlsn-utils"]
