[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
vlayer-engine = { path = "../engine" }
alloy-primitives = { workspace = true }
alloy-rlp-derive = { version = "0.3.5" }
alloy-rlp = { version = "0.3.5", default-features = false }
mpt = { path = "../../mpt" }
as-any = "0.3.1"
anyhow = "1.0"
revm = { version = "10.0.0", default-features = false }
