[package]
name = "call_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
call_engine = { path = "../engine" }
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-rlp = { workspace = true }
mpt = { path = "../../mpt" }
as-any = { workspace = true }
anyhow = { workspace = true }
revm = { workspace = true }
